<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">OTempo</string>
    <string name="preferencesActivity">Preferences</string>
    <string name="settings">Settings</string>
    <string name="source">Source</string>
    <string name="station_ordering">Station order</string>
    <string name="default_station">Initial station</string>
    <string name="fixed_station">Static station</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_background">Background</string>
    <string name="pref_stations">Stations</string>
    <string name="select_station">Choose station</string>
    <string name="internet_error">Internet access error</string>
    <string name="internal_error">Internal error</string>
    <string name="up_to_date">You already have the last prediction</string>
    <string name="loading_data">Loading data</string>
    <string name="gps_unavailable">GPS not available</string>
    <string name="my_location">My location</string>
    <string name="waiting_gps">Waiting location</string>
    <string name="changelogMenu">Versions</string>
    <string name="syncMenu">Sync now</string>
    <string name="shareMenu">Share</string>
    <string name="widget_name">OTempo</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="predicted_at">"'Predicted on' EEE d 'at' HH:mm"</string>
    <string name="predicted_time_why">Why?</string>
    <string name="predicted_time_explain">Right now, MeteoGalicia recomputes predictions just twice a day.</string>
    <string name="pref_updates">Automatic updates</string>
    <string name="update_period">Period</string>
    <string name="update_amount">Station count</string>
    <string name="share_chooser_title">Share OTempo App</string>
    <string name="share_subject">OTempo, galician weather for Android</string>
	<string name="shortTermDescriptionFormatMorning" formatted="false">
	    %s in the morning, with %s wind and rain probability of %.0f%%.
	</string>
	<string name="shortTermDescriptionFormatMorningNoRain" formatted="false">
	    %s in the morning, with %s wind (unknown rain probability).
	</string>
	<string name="shortTermDescriptionFormatAfternoon" formatted="false">
		%s in the afternoon, with %s wind and rain probability of %.0f%%.
	</string>
	<string name="shortTermDescriptionFormatAfternoonNoRain" formatted="false">
		%s in the afternoon, with %s wind (unknown rain probability).
	</string>
	<string name="shortTermDescriptionFormatNight" formatted="false">
		%s in the night, with %s wind and rain probability of %.0f%%.
	</string>
	<string name="shortTermDescriptionFormatNightNoRain" formatted="false">
		%s in the night, with %s wind (unknown rain probability).
	</string>
	<string name="mediumTermDescriptionFormat" formatted="false">
	    %s, with %s wind and rain probability of %.0f%%.
	</string>
	<string name="mediumTermDescriptionFormatNoRain" formatted="false">
	    %s, with %s wind (unknown rain probability).
	</string>
	<string name="sky_clear">Clear</string>
	<string name="sky_cloud_and_clear">Clouds and clears</string>
	<string name="sky_high_clouds">High clouds</string>
	<string name="sky_mostly_cloudy">Mostly cloudy</string>
	<string name="sky_cloudy">Cloudy</string>
	<string name="sky_dew">Dew</string>
	<string name="sky_shower">Showers</string>
	<string name="sky_rain">Rain</string>
	<string name="sky_storm">Storm</string>
	<string name="sky_fog">Fog</string>
	<string name="sky_fog_patches">Fog patches</string>
	<string name="sky_haze">Haze</string>
	<string name="sky_snow">Snow</string>
	<string name="sky_hail">Hail</string>
	<string name="sky_light_rain">Light rain</string>
	<string name="sky_light_shower">Light showers</string>
	<string name="sky_light_storm">Light storm</string>
	<string name="sky_medium_clouds">Medium clouds</string>
	<string name="sky_shower_snow">Snow showers</string>
	<string name="sky_sleet">Sleet</string>
	<string name="sky_unknown">Unknown sky state</string>
	<string name="wind_calm">calm</string>
	<string name="wind_variable">variable</string>
	<string name="wind_unknown">unknown</string>
	<string name="wind_light_east">light east</string>
	<string name="wind_light_north">light north</string>
	<string name="wind_light_northeast">light northeast</string>
	<string name="wind_light_northwest">light northwest</string>
	<string name="wind_light_south">light south</string>
	<string name="wind_light_southeast">light southeast</string>
	<string name="wind_light_southwest">light southwest</string>
	<string name="wind_light_west">light west</string>
	<string name="wind_mild_east">mild east</string>
	<string name="wind_mild_north">mild north</string>
	<string name="wind_mild_northeast">mild northeast</string>
	<string name="wind_mild_northwest">mild northwest</string>
	<string name="wind_mild_south">mild south</string>
	<string name="wind_mild_southeast">mild southeast</string>
	<string name="wind_mild_southwest">mild southwest</string>
	<string name="wind_mild_west">mild west</string>
	<string name="wind_strong_east">strong east</string>
	<string name="wind_strong_north">strong north</string>
	<string name="wind_strong_northeast">strong northeast</string>
	<string name="wind_strong_northwest">strong northwest</string>
	<string name="wind_strong_south">strong south</string>
	<string name="wind_strong_southeast">strong southeast</string>
	<string name="wind_strong_southwest">strong southwest</string>
	<string name="wind_strong_west">strong west</string>
	<string name="wind_very_strong_east">very strong east</string>
	<string name="wind_very_strong_north">very strong north</string>
	<string name="wind_very_strong_northeast">very strong northeast</string>
	<string name="wind_very_strong_northwest">very strong northwest</string>
	<string name="wind_very_strong_south">very strong south</string>
	<string name="wind_very_strong_southeast">very strong southeast</string>
	<string name="wind_very_strong_southwest">very strong southwest</string>
	<string name="wind_very_strong_west">very strong west</string>
	<string-array name="changelog_3_11">
		<item>Improve stability of the widget.</item>
	</string-array>
	<string-array name="changelog_3_10">
		<item>Fixed another crashing bug.</item>
	</string-array>
	<string-array name="changelog_3_9">
		<item>Custom backgrounds are working again.</item>
	</string-array>
	<string-array name="changelog_3_8">
		<item>Fixed a crashing bug and made the widget load faster.</item>
	</string-array>
	<string-array name="changelog_3_7">
		<item>Fixed offline mode.</item>
	</string-array>
	<string-array name="changelog_3_6">
		<item>Fixed another crashing bug.</item>
	</string-array>
	<string-array name="changelog_3_5">
		<item>Fixed a crashing bug. Thanks Guillermo for the feedback!</item>
	</string-array>
	<string-array name="changelog_3_4">
		<item>Added a menu on the top left corner for devices without a hardware menu button. Thanks Juan for the feedback!</item>
	</string-array>
	<string-array name="changelog_3_3">
		<item>Fix the rain message when the probability is unknown. Thanks Tony for the feedback!</item>
	</string-array>
	<string-array name="changelog_3_2">
        <item>Adapt to the new RSS location of Meteogalicia. Thanks Pilar and Konyn for the feedback!</item>
    </string-array>
    <string-array name="changelog_3_1">
        <item>Fixed a crash in the application.</item>
        <item>Improved the layout to look and feel the same in all devices. Thanks Adrian Barbeito for the feedback!</item>
    </string-array>
    	<string-array name="changelog_3_0">
    	<item>Added again medium-term predictions.</item>
    	<item>Added all the municipalities from Galicia.</item>
		<item>Medium term predictions have now description when tapping on them.</item>
		<item>Fixed a bug when tapping over short-term predictions if Meteogalicia does not have wind info.</item>
		<item>Removed the option of updating all the stations, to contain data transfers now that we support 315 municipalities.</item>
	</string-array>
	<string-array name="changelog_2_8">
    	<item>Migrated short-term predictions to the new Meteogalicia data format.</item>
		<item>Added new weather icons.</item>
		<item>Medium-term predictions disabled temporarily until they are adapted to the new data format.</item>
    </string-array>
    <string-array name="changelog_2_7">
    	<item>Added Ortigueira station. Thanks to Manel Villar for the patch.</item>
    </string-array>
    <string-array name="changelog_2_6">
    	<item>Synced with the new Meteogalicia RSS format</item>
    </string-array>
    <string-array name="changelog_2_5">
    	<item>Fixed a bug with advertisement</item>
    </string-array>
    <string-array name="changelog_2_4">
    	<item>Fixed a bug with dialog management</item>
    	<item>Updated the rain icon</item>
    </string-array>
    <string-array name="changelog_2_3">
    	<item>Fixed a bug in Android 1.5 devices</item>
    	<item>Fixed a bug with the new description dialog</item>
    </string-array>
    <string-array name="changelog_2_2">
    	<item>Short term predictions are now clickable to see the description</item>
    	<item>Fixed a bug when using a huge background image</item>
    </string-array>
    <string-array name="changelog_2_1">
    	<item>Added the snow icon</item>
    	<item>Fixed a couple of bugs reported by users</item>
    </string-array>
    <string-array name="changelog_2_0">
   		<item>You can change the background image. Tip: Use vertical images to avoid stretching.</item>
   		<item>The [Why?] button next to the prediction time will not be shown after you press it once.</item>
   		<item>Fixed a bug in the widget, that was showing the previous day prediction sometimes.</item>
   		<item>Added a share button to the menu. Use it to tell your friends about OTempo.</item>
    </string-array>
    <string-array name="changelog_1_9">
   		<item>Menu button to manually synchronize.</item>
   		<item>You can set the automatic synchronization period.</item>
   		<item>You can set the number of stations that are regularly updated.</item>
   		<item>Increased performance when processing RSS from MeteoGalicia (saves battery).</item>
   		<item>Preferences now show the default values when unset.</item>
   		<item>Solved bug that could crash OTempo when updating without Internet access. Reported by a user.</item>
   		<item>Predicted time now correctly displays minutes.</item>
    </string-array>
    <string-array name="changelog_1_8">
   		<item>Upgraded advertisement library to reduce network traffic and battery consumption.</item>
    </string-array>
    <string-array name="changelog_1_7">
   		<item>Added prediction time to the interface.</item>
   		<item>Added galician translation (for devices supporting this language).</item>
    </string-array>
    <string-array name="changelog_1_6">
   		<item>Fixed a bug with "today" detection, now the current day shows again in the application.</item>
   		<item>Added a workaround for corrupted Meteogalicia RSS.</item>
    </string-array>
    <string-array name="changelog_1_5">
   		<item>Created a widget. You can add it by long-pressing in the home screen.</item>
   		<item>Created a service that updates predictions in the background, if you have this enabled in the global android configuration.</item>
   		<item>While OTempo is updating predictions, it shows a notification.</item>
    </string-array>
    <string-array name="changelog_1_4">
   		<item>Fixed a bug parsing Meteogalicia RSS.</item>
    </string-array>
</resources>