<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
	<item 
		android:title="@string/settings"
		android:icon="@android:drawable/ic_menu_preferences"
		android:visible="true" 
		android:enabled="true" 
		android:checkable="false" 
		android:id="@+id/settings">
	</item>
	<item 
		android:title="@string/syncMenu"
		android:icon="@drawable/menu_update"
		android:visible="true" 
		android:enabled="true" 
		android:checkable="false" 
		android:id="@+id/syncNow">
	</item>
	<item 
		android:title="@string/shareMenu"
		android:icon="@android:drawable/ic_menu_share"
		android:visible="true" 
		android:enabled="true" 
		android:checkable="false" 
		android:id="@+id/shareFbook">
	</item>
	<item
		android:title="@string/source"
		android:icon="@android:drawable/ic_menu_info_details"
		android:visible="true" 
		android:enabled="true" 
		android:checkable="false" 
		android:id="@+id/source">
	</item>
	<item
		android:title="@string/my_location"
		android:icon="@android:drawable/ic_menu_mylocation"
		android:visible="true" 
		android:enabled="true" 
		android:checkable="false" 
		android:id="@+id/myLocation">
	</item>
	<item
		android:title="@string/changelogMenu"
		android:icon="@android:drawable/ic_menu_recent_history"
		android:visible="true" 
		android:enabled="true" 
		android:checkable="false" 
		android:id="@+id/changelogMenu">
	</item>
</menu>
